--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "remotePath": "",
       "port": 2345,
       "host": "127.0.0.1",
-      "program": "${fileDirname}",
+      "program": "index.go",
       "env": {},
       "args": [],
       "showLog": true
